--- a/serie.html
+++ b/serie.html
@@ -8,11 +8,7 @@
 <script src="series-data.js"></script>
 
 <style>
-*{
-  -webkit-user-select:none;
-  user-select:none;
-  -webkit-touch-callout:none;
-}
+*{user-select:none;-webkit-user-select:none}
 body{
   margin:0;
   background:#000;
@@ -21,27 +17,29 @@ body{
 }
 
 /* PLAYER */
+.player{
+  width:100%;
+  background:#000;
+}
 .player iframe{
   width:100%;
   height:56vw;
   max-height:75vh;
   border:none;
-  background:#000;
 }
 
 /* INFO */
 .details{padding:16px}
 .meta{color:#aaa;font-size:14px;margin-bottom:10px}
 
-/* ACTIONS */
+/* BUTTONS */
 .actions button{
   width:100%;
-  margin-top:8px;
   padding:12px;
+  margin-top:8px;
   border:none;
   border-radius:8px;
   font-weight:bold;
-  font-size:14px;
   cursor:pointer;
 }
 .watch{background:#e50914;color:#fff}
@@ -52,11 +50,11 @@ body{
 .section h3{margin-bottom:10px}
 
 /* EPISODES */
-#episodes{display:none}
+#episodesSection{display:none}
 .episodes{display:grid;gap:8px}
 .episode{
-  padding:10px;
   background:#181818;
+  padding:10px;
   border-radius:8px;
   cursor:pointer;
 }
@@ -104,11 +102,11 @@ body{
 
 <body>
 
-<!-- 🔐 PIN CHECK -->
+<!-- PIN CHECK -->
 <script>
-const pin = localStorage.getItem("activePIN");
-const exp = Number(localStorage.getItem("pinExpiry"));
-if(!pin || !exp || Date.now() > exp){
+const pin=localStorage.getItem("activePIN");
+const exp=Number(localStorage.getItem("pinExpiry"));
+if(!pin||!exp||Date.now()>exp){
   localStorage.clear();
   location.replace("login.html");
 }
@@ -122,8 +120,8 @@ if(!pin || !exp || Date.now() > exp){
 
   <div class="actions">
     <button class="watch" onclick="watchNow()">▶ Watch Now</button>
+    <button class="secondary" onclick="toggleEpisodes()">📺 Show / Hide Episodes</button>
     <button class="secondary" onclick="toggleShare()">📤 Share</button>
-    <button class="secondary" onclick="toggleEpisodes()">📺 Episodes</button>
   </div>
 
   <div class="section">
@@ -136,11 +134,13 @@ if(!pin || !exp || Date.now() > exp){
     <div class="cast" id="cast"></div>
   </div>
 
-  <div class="section" id="episodes">
+  <!-- EPISODES -->
+  <div class="section" id="episodesSection">
     <h3>Episodes</h3>
     <div class="episodes" id="episodeList"></div>
   </div>
 
+  <!-- RECOMMEND -->
   <div class="section">
     <h3>What to Watch Next</h3>
     <div class="suggestions" id="suggestions"></div>
@@ -153,16 +153,15 @@ if(!pin || !exp || Date.now() > exp){
     <h3>Share</h3>
     <button onclick="shareWA()">WhatsApp</button>
     <button onclick="shareIMO()">IMO</button>
-    <button onclick="shareTikTok()">TikTok</button>
-    <button onclick="copyShare()">Copy Link</button>
+    <button onclick="copyShare()">Copy</button>
     <button onclick="toggleShare()">Close</button>
   </div>
 </div>
 
 <script>
-/* ===== SERIES ===== */
-const id=new URLSearchParams(location.search).get("id");
-const serie=SERIES.find(s=>s.id===id);
+/* LOAD SERIES */
+const params=new URLSearchParams(location.search);
+const serie=SERIES.find(s=>s.id===params.get("id"));
 if(!serie) location.replace("series.html");
 
 title.textContent=serie.title;
@@ -177,25 +176,30 @@ serie.cast.forEach(c=>{
 });
 
 /* EMBED NORMALIZER */
-function embed(u){
-  if(/youtube\.com|youtu\.be/.test(u)){
-    const id=u.split("v=")[1]?.split("&")[0]||u.split("/").pop();
+function embed(url){
+  if(url.includes("youtube")){
+    const id=new URL(url).searchParams.get("v")||url.split("/").pop();
     return `https://www.youtube.com/embed/${id}`;
   }
-  if(u.includes("vimeo.com"))
-    return `https://player.vimeo.com/video/${u.split("/").pop()}`;
-  if(u.includes("drive.google.com")){
-    const id=u.match(/\/d\/([^/]+)/);
+  if(url.includes("youtu.be")){
+    return `https://www.youtube.com/embed/${url.split("/").pop()}`;
+  }
+  if(url.includes("vimeo.com")){
+    return `https://player.vimeo.com/video/${url.split("/").pop()}`;
+  }
+  if(url.includes("drive.google.com")){
+    const id=url.match(/\/d\/([^/]+)/);
     return `https://drive.google.com/file/d/${id[1]}/preview`;
   }
-  return u;
+  return url; // mp4 / direct
 }
 
 /* PLAYER */
-function play(video,fs=false){
-  player.innerHTML=`<iframe id="vf" src="${embed(video)}" allowfullscreen></iframe>`;
-  if(fs){
-    const f=document.getElementById("vf");
+function play(video,fullscreen=false){
+  player.innerHTML=
+    `<iframe id="videoFrame" src="${embed(video)}" allow="autoplay; fullscreen" allowfullscreen></iframe>`;
+  if(fullscreen){
+    const f=document.getElementById("videoFrame");
     f.requestFullscreen?.();
     screen.orientation?.lock("landscape").catch(()=>{});
   }
@@ -206,17 +210,17 @@ function watchNow(){
 }
 
 /* EPISODES */
-serie.episodes.forEach((e,i)=>{
+serie.episodes.forEach((ep,i)=>{
   const d=document.createElement("div");
   d.className="episode";
-  d.textContent=`Episode ${i+1} • ${e.title}`;
-  d.onclick=()=>play(e.video,true);
+  d.textContent=`Episode ${i+1} • ${ep.title}`;
+  d.onclick=()=>play(ep.video,true);
   episodeList.appendChild(d);
 });
 
 function toggleEpisodes(){
-  episodes.style.display =
-    episodes.style.display==="none"?"block":"none";
+  episodesSection.style.display =
+    episodesSection.style.display==="none"?"block":"none";
 }
 
 /* SHARE */
@@ -233,16 +237,12 @@ function shareWA(){
 function shareIMO(){
   location.href=`imo://send?text=${encodeURIComponent(SHARE_TEXT)}`;
 }
-function shareTikTok(){
-  navigator.clipboard.writeText(SHARE_TEXT);
-  alert("Copied! Paste into TikTok.");
-}
 function copyShare(){
   navigator.clipboard.writeText(SHARE_TEXT);
-  alert("Copied to clipboard");
+  alert("Copied");
 }
 
-/* SUGGESTIONS */
+/* RECOMMENDATIONS */
 SERIES.filter(s=>s.genre===serie.genre && s.id!==serie.id)
 .slice(0,4)
 .forEach(s=>{
