--- a/movie.html
+++ b/movie.html
@@ -113,21 +113,35 @@ document.addEventListener("DOMContentLoaded", () => {
   synopsis.textContent = movie.synopsis;
 
   /* ===== PLAYER ===== */
-  function embed(url){
-    if(url.includes("youtube")){
-      const vid = url.includes("youtu.be")
-        ? url.split("youtu.be/")[1]
-        : new URL(url).searchParams.get("v");
-      return `https://www.youtube.com/embed/${vid}`;
-    }
-    if(url.includes("vimeo")){
-      return "https://player.vimeo.com/video/" + url.split("/").pop();
-    }
-    if(url.includes("drive.google.com")){
-      const id = url.match(/\/d\/([^/]+)/);
-      if(id) return `https://drive.google.com/file/d/${id[1]}/preview`;
-    }
-    return url;
+ function embed(url){
+  if(!url) return "";
+
+  // already embed → return as-is
+  if(url.includes("/embed/")) return url;
+
+  if(url.includes("youtube.com/watch")){
+    return "https://www.youtube.com/embed/" +
+      new URL(url).searchParams.get("v");
+  }
+
+  if(url.includes("youtu.be/")){
+    return "https://www.youtube.com/embed/" +
+      url.split("youtu.be/")[1];
+  }
+
+  if(url.includes("vimeo.com")){
+    return "https://player.vimeo.com/video/" +
+      url.split("/").pop();
+  }
+
+  if(url.includes("drive.google.com")){
+    const m = url.match(/\/d\/([^/]+)/);
+    if(m) return `https://drive.google.com/file/d/${m[1]}/preview`;
+  }
+
+  return url;
+}
+
   }
 
   window.watchNow = function(){
