--- a/serie.html
+++ b/serie.html
@@ -2,78 +2,40 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>BUSANSO – Series</title>
+<title>BUSANSO – Player</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- Your data -->
 <script src="series-data.js"></script>
+<script src="movies-data.js"></script>
 
 <style>
-body{
-  margin:0;
-  background:#000;
-  color:#fff;
-  font-family:Arial, sans-serif;
-}
-.player{
-  width:100%;
-  background:#000;
-}
-.player iframe{
-  width:100%;
-  height:56vw;
-  max-height:75vh;
-  border:none;
-}
+body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif}
+.player{width:100%;background:#000;}
+.player iframe{width:100%;height:56vw;max-height:75vh;border:none;}
 .details{padding:16px}
 .meta{color:#aaa;font-size:14px;margin-bottom:10px}
-
 .actions button{
-  width:100%;
-  padding:12px;
-  margin-top:8px;
-  border:none;
-  border-radius:8px;
-  font-weight:bold;
-  cursor:pointer;
+  width:100%;padding:12px;margin-top:8px;border:none;border-radius:8px;
+  font-weight:bold;cursor:pointer;font-size:14px;
 }
 .watch{background:#e50914;color:#fff}
 .secondary{background:#222;color:#fff}
-
 .section{margin-top:20px}
 #episodesSection{display:none}
-
 .episodes{display:grid;gap:8px}
-.episode{
-  background:#181818;
-  padding:10px;
-  border-radius:8px;
-  cursor:pointer;
-}
+.episode{background:#181818;padding:10px;border-radius:8px;cursor:pointer}
 .episode:hover{background:#e50914}
-
 .cast{display:flex;flex-wrap:wrap;gap:8px}
-.cast span{
-  background:#181818;
-  padding:6px 10px;
-  border-radius:20px;
-  font-size:12px;
-}
+.cast span{background:#181818;padding:6px 10px;border-radius:20px;font-size:12px}
+.recommendations{margin-top:20px}
+.recommend-card{background:#111;padding:10px;border-radius:12px;margin-bottom:10px;cursor:pointer}
+.recommend-card:hover{background:#e50914}
 </style>
 </head>
 
 <body>
 
-<!-- 🔐 PIN CHECK -->
-<script>
-const pin = localStorage.getItem("activePIN");
-const exp = Number(localStorage.getItem("pinExpiry"));
-if(!pin || !exp || Date.now() > exp){
-  localStorage.clear();
-  location.replace("login.html");
-}
-</script>
-
-<!-- PLAYER -->
 <div class="player" id="player"></div>
 
 <div class="details">
@@ -83,6 +45,7 @@ if(!pin || !exp || Date.now() > exp){
   <div class="actions">
     <button class="watch" id="watchBtn">▶ Watch Now</button>
     <button class="secondary" onclick="toggleEpisodes()">📺 Episodes</button>
+    <button class="secondary" onclick="shareContent()">📤 Share</button>
   </div>
 
   <div class="section">
@@ -99,130 +62,131 @@ if(!pin || !exp || Date.now() > exp){
     <h3>Episodes</h3>
     <div class="episodes" id="episodeList"></div>
   </div>
+
+  <div class="section recommendations">
+    <h3>Recommended for you</h3>
+    <div id="recommendContainer"></div>
+  </div>
 </div>
 
 <script>
-/* ===== LOAD SERIES ===== */
+const SITE_URL = location.origin + location.pathname;
+
+// Get ID from URL
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
+if(!id) location.replace("index.html");
 
-if(!id || typeof SERIES === "undefined"){
-  location.replace("series.html");
+// Merge movies and series arrays for easy search
+const ALL_CONTENT = [...MOVIES, ...SERIES];
+
+// Find current item
+const item = ALL_CONTENT.find(x => x.id===id);
+if(!item) location.replace("index.html");
+
+// Auto-migrate old series with episodesHTML
+function migrateEpisodes(serie){
+  if(Array.isArray(serie.episodes) && serie.episodes.length) return serie.episodes;
+  if(!serie.episodesHTML) return [];
+  const temp = document.createElement("div");
+  temp.innerHTML = serie.episodesHTML;
+  const links = temp.querySelectorAll("a");
+  const episodes = [];
+  links.forEach((a,i)=>{
+    const url = a.getAttribute("href");
+    if(url) episodes.push({title:a.textContent?.trim()||`Episode ${i+1}`, video:url.trim()});
+  });
+  return episodes;
 }
 
-const serie = SERIES.find(s => s.id === id);
-if(!serie || !Array.isArray(serie.episodes) || !serie.episodes.length){
-  alert("No episodes available");
-}
+if(item.episodesHTML && !item.episodes) item.episodes = migrateEpisodes(item);
 
-/* INFO */
-title.textContent = serie.title;
-meta.textContent = `${serie.country} • ${serie.genre} • ${serie.year}`;
-synopsis.textContent = serie.synopsis || "";
-
-/* CAST */
-(serie.cast || []).forEach(c=>{
-  const s=document.createElement("span");
+// Populate info
+title.textContent = item.title;
+meta.textContent = `${item.country||''} • ${item.genre||''} • ${item.year||''}`;
+synopsis.textContent = item.synopsis||'';
+(cast || []).forEach(c=>{
+  const s = document.createElement("span");
+  s.textContent=c;
+  cast.appendChild(s);
+});
+if(item.cast) item.cast.forEach(c=>{
+  const s = document.createElement("span");
   s.textContent=c;
   cast.appendChild(s);
 });
 
-/* ===== UNIVERSAL EMBED FIX ===== */
+// Normalize video URLs
 function normalizeVideo(url){
   if(!url) return null;
-
   try{
-    // YouTube Shorts
-    if(url.includes("youtube.com/shorts/")){
-      return "https://www.youtube.com/embed/" +
-        url.split("/shorts/")[1].split("?")[0];
-    }
-
-    // YouTube Watch
-    if(url.includes("youtube.com/watch")){
-      const u=new URL(url);
-      return "https://www.youtube.com/embed/" + u.searchParams.get("v");
-    }
-
-    // youtu.be
-    if(url.includes("youtu.be/")){
-      return "https://www.youtube.com/embed/" +
-        url.split("youtu.be/")[1].split("?")[0];
-    }
-
-    // Already embedded YouTube
-    if(url.includes("youtube.com/embed")){
-      return url;
-    }
-
-    // Vimeo
-    if(url.includes("vimeo.com")){
-      return "https://player.vimeo.com/video/" +
-        url.split("/").pop().split("?")[0];
-    }
-
-    // Google Drive /d/
-    if(url.includes("/d/")){
-      return "https://drive.google.com/file/d/" +
-        url.split("/d/")[1].split("/")[0] + "/preview";
-    }
-
-    // Google Drive open?id=
-    if(url.includes("drive.google.com/open")){
-      const u=new URL(url);
-      return "https://drive.google.com/file/d/" +
-        u.searchParams.get("id") + "/preview";
-    }
-
-    // Direct MP4 / Web
+    if(url.includes("youtube.com/shorts/")) return "https://www.youtube.com/embed/"+url.split("/shorts/")[1].split("?")[0];
+    if(url.includes("youtube.com/watch")) return "https://www.youtube.com/embed/"+new URL(url).searchParams.get("v");
+    if(url.includes("youtu.be/")) return "https://www.youtube.com/embed/"+url.split("youtu.be/")[1].split("?")[0];
+    if(url.includes("youtube.com/embed")) return url;
+    if(url.includes("vimeo.com")) return "https://player.vimeo.com/video/"+url.split("/").pop().split("?")[0];
+    if(url.includes("/d/")) return "https://drive.google.com/file/d/"+url.split("/d/")[1].split("/")[0]+"/preview";
+    if(url.includes("drive.google.com/open")) return "https://drive.google.com/file/d/"+(new URL(url).searchParams.get("id"))+"/preview";
     return url;
-  }catch(e){
-    return null;
-  }
+  }catch(e){return null;}
 }
 
-/* ===== PLAYER ===== */
+// Play video
 function play(video, fullscreen=false){
   const src = normalizeVideo(video);
-  if(!src){
-    alert("Video not supported");
-    return;
-  }
-
-  player.innerHTML = `
-    <iframe
-      src="${src}"
-      allow="autoplay; fullscreen"
-      allowfullscreen>
-    </iframe>
-  `;
-
+  if(!src){alert("Video not supported"); return;}
+  player.innerHTML = `<iframe src="${src}" allow="autoplay; fullscreen" allowfullscreen></iframe>`;
   if(fullscreen){
-    const f=player.querySelector("iframe");
+    const f = player.querySelector("iframe");
     f.requestFullscreen?.();
     screen.orientation?.lock("landscape").catch(()=>{});
   }
 }
 
-/* WATCH NOW */
+// WATCH NOW
 document.getElementById("watchBtn").onclick = ()=>{
-  play(serie.episodes[0].video,true);
+  if(item.episodes && item.episodes.length){
+    play(item.episodes[0].video,true);
+  } else if(item.video){
+    play(item.video,true);
+  } else alert("No video available");
 };
 
-/* EPISODES */
-serie.episodes.forEach((ep,i)=>{
-  const d=document.createElement("div");
-  d.className="episode";
-  d.textContent=`Episode ${i+1} • ${ep.title || ""}`;
-  d.onclick=()=>play(ep.video,true);
-  episodeList.appendChild(d);
-});
-
+// EPISODES LIST
+const episodeListDiv = document.getElementById("episodeList");
 function toggleEpisodes(){
-  episodesSection.style.display =
-    episodesSection.style.display==="none"?"block":"none";
+  const section = document.getElementById("episodesSection");
+  section.style.display = section.style.display==="none"?"block":"none";
 }
-</script>
+if(item.episodes){
+  item.episodes.forEach((ep,i)=>{
+    const div = document.createElement("div");
+    div.className="episode";
+    div.textContent=`Episode ${i+1} • ${ep.title||''}`;
+    div.onclick=()=>play(ep.video,true);
+    episodeListDiv.appendChild(div);
+  });
+}
 
+// SHARE
+function shareContent(){
+  const text = `${item.title}\n${item.synopsis||''}\nWatch on BUSANSO: ${SITE_URL}`;
+  if(navigator.share){
+    navigator.share({title:item.title,text,text,url:SITE_URL}).catch(()=>{});
+  } else {
+    prompt("Copy this text to share:", text);
+  }
+}
+
+// RECOMMENDATIONS (same genre)
+const recDiv = document.getElementById("recommendContainer");
+ALL_CONTENT.filter(x=>x.id!==item.id && x.genre===item.genre).slice(0,5).forEach(x=>{
+  const card = document.createElement("div");
+  card.className="recommend-card";
+  card.textContent = x.title;
+  card.onclick=()=>location.href=`?id=${x.id}`;
+  recDiv.appendChild(card);
+});
+</script>
 </body>
 </html>
