--- a/series.html
+++ b/series.html
@@ -63,7 +63,7 @@ body{margin:0;background:#0f0f0f;color:#fff;font-family:Arial}
   <button onclick="location.href='watch.html'">🏠 Home</button>
   <button onclick="location.href='movies.html'">🎬 Movies</button>
   <button onclick="location.href='donate.html'">❤️ Donate</button>
-  <button onclick="location.href='marriage.html'">💍 Marriage</button>
+  <button onclick="location.href='https://youtube.com/@marriagetips-f7e?si=LHYc47_CHGxNh7-3'">💍 Marriage Tips</button>
 </div>
 
 <div class="search">
