--- a/serie.html
+++ b/serie.html
@@ -5,15 +5,15 @@
 <title>BUSANSO – Player</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Your data -->
+<!-- Load series data -->
 <script src="series-data.js"></script>
-<script src="movies-data.js"></script>
 
 <style>
-body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif}
-.player{width:100%;background:#000;}
-.player iframe{width:100%;height:56vw;max-height:75vh;border:none;}
-.details{padding:16px}
+body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:16px}
+h1{margin-bottom:10px;text-align:center}
+.player{width:100%;max-width:800px;margin:0 auto;background:#000}
+.player iframe{width:100%;height:56vw;max-height:450px;border:none}
+.details{max-width:800px;margin:16px auto;padding:16px;background:#111;border-radius:12px}
 .meta{color:#aaa;font-size:14px;margin-bottom:10px}
 .actions button{
   width:100%;padding:12px;margin-top:8px;border:none;border-radius:8px;
@@ -21,16 +21,11 @@ body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif}
 }
 .watch{background:#e50914;color:#fff}
 .secondary{background:#222;color:#fff}
-.section{margin-top:20px}
-#episodesSection{display:none}
-.episodes{display:grid;gap:8px}
+.episodes{display:grid;gap:8px;margin-top:10px}
 .episode{background:#181818;padding:10px;border-radius:8px;cursor:pointer}
 .episode:hover{background:#e50914}
-.cast{display:flex;flex-wrap:wrap;gap:8px}
+.cast{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px}
 .cast span{background:#181818;padding:6px 10px;border-radius:20px;font-size:12px}
-.recommendations{margin-top:20px}
-.recommend-card{background:#111;padding:10px;border-radius:12px;margin-bottom:10px;cursor:pointer}
-.recommend-card:hover{background:#e50914}
 </style>
 </head>
 
@@ -39,13 +34,12 @@ body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif}
 <div class="player" id="player"></div>
 
 <div class="details">
-  <h2 id="title"></h2>
+  <h1 id="title"></h1>
   <div class="meta" id="meta"></div>
 
   <div class="actions">
     <button class="watch" id="watchBtn">▶ Watch Now</button>
     <button class="secondary" onclick="toggleEpisodes()">📺 Episodes</button>
-    <button class="secondary" onclick="shareContent()">📤 Share</button>
   </div>
 
   <div class="section">
@@ -58,69 +52,53 @@ body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif}
     <div class="cast" id="cast"></div>
   </div>
 
-  <div class="section" id="episodesSection">
+  <div class="section" id="episodesSection" style="display:none">
     <h3>Episodes</h3>
     <div class="episodes" id="episodeList"></div>
-  </div>
-
-  <div class="section recommendations">
-    <h3>Recommended for you</h3>
-    <div id="recommendContainer"></div>
   </div>
 </div>
 
 <script>
-const SITE_URL = location.origin + location.pathname;
-
-// Get ID from URL
+// Get series ID from URL
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
-if(!id) location.replace("index.html");
+if(!id) location.replace("series-list.html");
 
-// Merge movies and series arrays for easy search
-const ALL_CONTENT = [...MOVIES, ...SERIES];
+// Find the series in SERIES array
+const serie = SERIES.find(s => s.id === id);
+if(!serie) location.replace("series-list.html");
 
-// Find current item
-const item = ALL_CONTENT.find(x => x.id===id);
-if(!item) location.replace("index.html");
-
-// Auto-migrate old series with episodesHTML
-function migrateEpisodes(serie){
-  if(Array.isArray(serie.episodes) && serie.episodes.length) return serie.episodes;
-  if(!serie.episodesHTML) return [];
+// Auto-migrate old episodesHTML
+function migrateEpisodes(s){
+  if(Array.isArray(s.episodes) && s.episodes.length) return s.episodes;
+  if(!s.episodesHTML) return [];
   const temp = document.createElement("div");
-  temp.innerHTML = serie.episodesHTML;
-  const links = temp.querySelectorAll("a");
+  temp.innerHTML = s.episodesHTML;
   const episodes = [];
-  links.forEach((a,i)=>{
+  temp.querySelectorAll("a").forEach((a,i)=>{
     const url = a.getAttribute("href");
     if(url) episodes.push({title:a.textContent?.trim()||`Episode ${i+1}`, video:url.trim()});
   });
   return episodes;
 }
 
-if(item.episodesHTML && !item.episodes) item.episodes = migrateEpisodes(item);
+serie.episodes = migrateEpisodes(serie);
 
-// Populate info
-title.textContent = item.title;
-meta.textContent = `${item.country||''} • ${item.genre||''} • ${item.year||''}`;
-synopsis.textContent = item.synopsis||'';
-(cast || []).forEach(c=>{
-  const s = document.createElement("span");
-  s.textContent=c;
-  cast.appendChild(s);
-});
-if(item.cast) item.cast.forEach(c=>{
-  const s = document.createElement("span");
-  s.textContent=c;
-  cast.appendChild(s);
+// Populate series info
+document.getElementById("title").textContent = serie.title;
+document.getElementById("meta").textContent = `${serie.genre} • ${serie.country} • ${serie.year}`;
+document.getElementById("synopsis").textContent = serie.synopsis || "";
+const castDiv = document.getElementById("cast");
+if(serie.cast) serie.cast.forEach(c=>{
+  const span = document.createElement("span");
+  span.textContent = c;
+  castDiv.appendChild(span);
 });
 
 // Normalize video URLs
 function normalizeVideo(url){
   if(!url) return null;
   try{
-    if(url.includes("youtube.com/shorts/")) return "https://www.youtube.com/embed/"+url.split("/shorts/")[1].split("?")[0];
     if(url.includes("youtube.com/watch")) return "https://www.youtube.com/embed/"+new URL(url).searchParams.get("v");
     if(url.includes("youtu.be/")) return "https://www.youtube.com/embed/"+url.split("youtu.be/")[1].split("?")[0];
     if(url.includes("youtube.com/embed")) return url;
@@ -132,61 +110,37 @@ function normalizeVideo(url){
 }
 
 // Play video
-function play(video, fullscreen=false){
-  const src = normalizeVideo(video);
-  if(!src){alert("Video not supported"); return;}
-  player.innerHTML = `<iframe src="${src}" allow="autoplay; fullscreen" allowfullscreen></iframe>`;
-  if(fullscreen){
-    const f = player.querySelector("iframe");
-    f.requestFullscreen?.();
-    screen.orientation?.lock("landscape").catch(()=>{});
-  }
+function playVideo(video){
+  const embed = normalizeVideo(video);
+  if(!embed){ alert("Video not supported"); return; }
+  document.getElementById("player").innerHTML = `<iframe src="${embed}" allow="autoplay; fullscreen" allowfullscreen></iframe>`;
 }
 
-// WATCH NOW
+// WATCH NOW button
 document.getElementById("watchBtn").onclick = ()=>{
-  if(item.episodes && item.episodes.length){
-    play(item.episodes[0].video,true);
-  } else if(item.video){
-    play(item.video,true);
-  } else alert("No video available");
+  if(serie.episodes && serie.episodes.length){
+    playVideo(serie.episodes[0].video);
+  }else{
+    alert("No episodes available");
+  }
 };
 
-// EPISODES LIST
-const episodeListDiv = document.getElementById("episodeList");
+// Toggle episodes list
 function toggleEpisodes(){
   const section = document.getElementById("episodesSection");
   section.style.display = section.style.display==="none"?"block":"none";
 }
-if(item.episodes){
-  item.episodes.forEach((ep,i)=>{
-    const div = document.createElement("div");
-    div.className="episode";
-    div.textContent=`Episode ${i+1} • ${ep.title||''}`;
-    div.onclick=()=>play(ep.video,true);
-    episodeListDiv.appendChild(div);
-  });
-}
 
-// SHARE
-function shareContent(){
-  const text = `${item.title}\n${item.synopsis||''}\nWatch on BUSANSO: ${SITE_URL}`;
-  if(navigator.share){
-    navigator.share({title:item.title,text,text,url:SITE_URL}).catch(()=>{});
-  } else {
-    prompt("Copy this text to share:", text);
-  }
-}
-
-// RECOMMENDATIONS (same genre)
-const recDiv = document.getElementById("recommendContainer");
-ALL_CONTENT.filter(x=>x.id!==item.id && x.genre===item.genre).slice(0,5).forEach(x=>{
-  const card = document.createElement("div");
-  card.className="recommend-card";
-  card.textContent = x.title;
-  card.onclick=()=>location.href=`?id=${x.id}`;
-  recDiv.appendChild(card);
+// Populate episodes list
+const episodeListDiv = document.getElementById("episodeList");
+if(serie.episodes) serie.episodes.forEach((ep,i)=>{
+  const div = document.createElement("div");
+  div.className = "episode";
+  div.textContent = `Episode ${i+1} • ${ep.title || ''}`;
+  div.onclick = ()=>playVideo(ep.video);
+  episodeListDiv.appendChild(div);
 });
 </script>
+
 </body>
 </html>
