--- a/series.html
+++ b/series.html
@@ -86,7 +86,7 @@ function render(data){
       <img src="${s.poster}">
       <div class="info">
         <div class="title">${s.title}</div>
-        <div class="meta">${s.country} • ${s.seasons} Seasons</div>
+      <div class="meta">${s.country} • ${s.genre} • ${s.year}</div>
         <button class="watch">Watch Now</button>
       </div>`;
     c.querySelector("button").onclick=()=>{
